styling fixes
Fixed an issue where the bottom container (next and back buttons) would overlay themselves on top of elements obstructing important user input elements. Also added some maximum size values for the header so the logo wouldn't look like a smash burger if you squished the site's height down

--- a/src/Styles/CreateAccount.css
+++ b/src/Styles/CreateAccount.css
@@ -13,3 +13,12 @@
   font-weight: 500;
   font-size: 20px;
 }
+.CA-container {
+  height: max(62vh, 500px);
+  margin-bottom: max(10vh, 100px);
+  justify-content: center;
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+}
