--- a/src/Styles/general.css
+++ b/src/Styles/general.css
@@ -24,12 +24,12 @@
   margin-right: 5px;
 }
 .bottom-container {
-  position: fixed;
   bottom: 0;
   left: 0;
   width: 100%;
   text-align: center;
   padding: 10px;
+  background-color: #4e4d5c;
 }
 .top-container {
   position: fixed;
@@ -71,4 +71,9 @@
   align-content: center;
   max-height: 60px;
   width: 100vw;
+}
+@media (min-height: 800px) {
+  .bottom-container {
+    position: fixed;
+  }
 }
